--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,4 @@
 @charset "UTF-8";
-/* Tuesday CSS Document */
-
-
 /* Color Palette
 
 Purple: http://slayeroffice.com/tools/color_palette/?hex=39275B
@@ -10,20 +7,12 @@ Purple: http://slayeroffice.com/tools/color_palette/?hex=39275B
 
 * { margin:5; padding: 0; }
 
-html {
-/*	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2B1D44', endColorstr='#39275B'); INTERNET EXPLODER */
-/*	background: -webkit-gradient(linear, left top, left bottom, from(#2B1D44), to(#39275B)); CHROME/SAFARI */
-/*	background: -moz-linear-gradient(top, #2B1D44, #39275B); FIREFOX */
-	
-}
-
 body {
+  margin:0;
 	
 	background-position: center top;
 	background-repeat:repeat-x;
-	
-	background-image:url(CSS_DropDown/images/bg-boxes.png);
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Helvetica", "Arial", sans-serif;
 	font-size: 100%; /* 16px */
 	line-height: 150%; /* 24px */
 	color: #000;
@@ -32,8 +21,7 @@ body {
 
 h1 {
 	font-size: 2.25em;
-	margin-top: 20px;
-	
+	margin-top: 20px; 
 }
 
 p {
@@ -71,8 +59,7 @@ img, embed, object, video, iframe {
 	background-repeat:repeat-y;
 	background-color: #FFF;
 	max-width: 940px;
-	margin: 50px auto;
-	padding: 20px;
+	margin: 0px auto;
 }
 
 header {
@@ -90,7 +77,7 @@ nav ul li {
 	float: left;
 	list-style-type: ; /* none; */
 	margin-right: 20px;	
-	}
+}
 	
 	nav ul li a {
 		color: #000;
