--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ Purple: http://slayeroffice.com/tools/color_palette/?hex=39275B
 
 */
 
-* { margin:5; padding: 0; }
+* { padding: 0; }
 
 body {
   margin:0;
@@ -62,9 +62,15 @@ img, embed, object, video, iframe {
 	margin: 0px auto;
 }
 
-header {
-	margin-bottom: 20px;
+#header {
+  background-color:#4971a4;
+  padding:15px;
 }
+  #header a {
+    color:#fff;
+    text-decoration:none;
+    line-height:31px;
+  }
 
 nav {
 	overflow: hidden;
