--- a/styles.css
+++ b/styles.css
@@ -165,10 +165,23 @@ footer {
 
 #icons {
   margin:0px auto;
-  margin-top:20px;
-
+  margin-top:40px;
 }
+  .menu-overlay {
+    background-color:rgba(0,0,0,0.2);
+    position:absolute;
+    top:0;
+    height:150px;
+    right:0;
+    color:#000;
+    font-size:10pt;
+    line-height:11pt;
+    padding:10px;
+    width:100%;
+    box-sizing:border-box;
+  }
   #icons .menu-bit {
+    position:relative;
     display:inline-block;
     width:260px;
     margin-left: 5px;
