--- a/styles.css
+++ b/styles.css
@@ -201,17 +201,17 @@ footer {
   margin-top:40px;
 }
   .menu-overlay {
-    background-color:rgba(0,0,0,0.2);
+    background-color:rgba(0,0,0,0.7);
     position:absolute;
-    top:-20px;
+    top:0px;
     height:150px;
     right:0;
-    color:#000;
+    color:#fff;
     font-size:10pt;
     line-height:11pt;
     padding:10px;
     width:100%;
-    opacity:0;
+    opacity:1;
     box-sizing:border-box;
     -webkit-transition: opacity 0.1s linear, top 0.1s linear;
        -moz-transition: opacity 0.1s linear, top 0.1s linear;
@@ -219,8 +219,8 @@ footer {
             transition: opacity 0.1s linear, top 0.1s linear;
   }
     .menu-overlay:hover {
-      opacity:1;
-      top:0;
+      opacity:0;
+      top:-20px;
     }
   #icons .menu-bit {
     position:relative;
