--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ p {
 }
 
 article {
-  max-width:830px;
+  max-width:940px;
   margin:0px auto;
   margin-top:20px;
 }
@@ -204,11 +204,8 @@ footer {
     background-color:rgba(0,0,0,0.7);
     position:absolute;
     top:0px;
-    height:150px;
+    height:180px;
     right:0;
-    color:#fff;
-    font-size:10pt;
-    line-height:11pt;
     padding:10px;
     width:100%;
     opacity:1;
@@ -218,6 +215,15 @@ footer {
          -o-transition: opacity 0.1s linear, top 0.1s linear;
             transition: opacity 0.1s linear, top 0.1s linear;
   }
+    .menu-overlay p {
+      text-align: center;
+      font-size: 16pt;
+      color: #FFF;
+      line-height: 17pt;
+      position: absolute;
+      top: 2rem;
+      text-shadow: 1px 1px 1px #222;
+    }
     .menu-overlay:hover {
       opacity:0;
       top:-20px;
@@ -229,7 +235,7 @@ footer {
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom:10px;
-    min-height:210px;
+    min-height:180px;
   }
     .menu-bit a {
       color:#646464;
@@ -243,10 +249,6 @@ footer {
       a:hover {
         cursor:pointer;
       }
-    .menu-bit p {
-      margin:0px auto;
-      font-size:12pt;
-    }
 
 #footer-desc {
   background-color:#ccc;
