--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@ article {
   margin:0px auto;
   margin-top:20px;
 }
+  article h1 {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
 
 p.copyright {
 	font-size: 12px;
@@ -220,9 +224,12 @@ footer {
       font-size: 16pt;
       color: #FFF;
       line-height: 17pt;
-      position: absolute;
-      top: 2rem;
+      height:50px;
+      width:100%;
       text-shadow: 1px 1px 1px #222;
+      margin: auto;
+      position: absolute;
+      top: 0; left: 0; bottom: 0; right: 0;
     }
     .menu-overlay:hover {
       opacity:0;
@@ -234,7 +241,7 @@ footer {
     width: 24%;
     margin-left: 0.5%;
     margin-right: 0%;
-    margin-bottom:10px;
+    margin-bottom:0%;
     min-height:180px;
   }
     .menu-bit a {
