--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ img, embed, object, video, iframe {
 	background-position: center;
 	background-repeat:repeat-y;
 	background-color: #FFF;
-	max-width: 940px;
+	/* max-width: 940px; */
 	margin: 0px auto;
 }
 
@@ -77,11 +77,15 @@ img, embed, object, video, iframe {
   background-color:#4971a4;
   padding:15px;
   position:relative;
+  padding-right:1rem;
 }
   #header a {
     color:#fff;
     text-decoration:none;
     line-height:31px;
+  }
+  #header .contents {
+    padding-left:3rem;
   }
   #contact-header {
     position:absolute;
@@ -269,3 +273,97 @@ footer {
     #footer-desc ul li {
       list-style-type:none;
     }
+
+.menu{
+	border:none;
+	margin:0px;
+	padding:0px;
+	font: 67.5% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
+	font-size:14px;
+	font-weight:bold;
+  min-width:750px;
+	}
+.menu ul{
+	background:#333333;
+	height:35px;
+	list-style:none;
+	margin:0;
+  padding:0;
+  padding-left:3rem;
+
+	}
+	.menu li{
+		float:left;
+		padding:0px;
+  }
+	.menu li a,
+  .menu li span {
+		background:#333333 url("images/seperator.gif") bottom right no-repeat;
+		color:#cccccc;
+		display:block;
+		font-weight:normal;
+		line-height:35px;
+		margin:0px;
+		padding:0px 25px;
+		text-align:center;
+		text-decoration:none;
+    -webkit-transition: background-color 0.1s linear;
+       -moz-transition: background-color 0.1s linear;
+         -o-transition: background-color 0.1s linear;
+            transition: background-color 0.1s linear;
+		}
+		.menu li a:hover,
+    .menu ul li:hover a{
+			background: #2580a2 url("images/hover.gif") bottom center no-repeat;
+			color:#FFFFFF;
+			text-decoration:none;
+			}
+	.menu li ul{
+		background:#333333;
+		display:none;
+		height:auto;
+		padding:0px;
+		margin:0px;
+		border:0px;
+		position:absolute;
+		width:225px;
+		z-index:200;
+		/*top:1em;
+		/*left:0;*/
+		}
+	.menu li:hover ul{
+		display:block;
+		
+		}
+	.menu li li {
+		background:url('images/sub_sep.gif') bottom left no-repeat;
+		display:block;
+		float:none;
+		margin:0px;
+		padding:0px;
+		width:225px;
+		}
+	.menu li:hover li a{
+		background:none;
+		
+		}
+	.menu li ul a{
+		display:block;
+		height:35px;
+		font-size:12px;
+		font-style:normal;
+		margin:0px;
+		padding:0px 10px 0px 15px;
+		text-align:left;
+		}
+		.menu li ul a:hover, .menu li ul li:hover a{
+			background:#2580a2 url('images/hover_sub.gif') center left no-repeat;
+			border:0px;
+			color:#ffffff;
+			text-decoration:none;
+			}
+	.menu p{
+		clear:left;
+		}	
+
+		
