--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,8 @@ p {
 article {
   max-width:940px;
   margin:0px auto;
-  margin-top:20px;
+  margin-top: 3rem;
+  margin-bottom: 4rem;
 }
   article h1 {
     margin-top: 3rem;
