--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ img, embed, object, video, iframe {
   #header a {
     color:#fff;
     text-decoration:none;
-    line-height:31px;
+    line-height:2rem;
   }
   #header .contents {
     padding-left:3rem;
@@ -279,7 +279,7 @@ footer {
       list-style-type:none;
     }
 
-.menu{
+.menu {
 	border:none;
 	margin:0px;
 	padding:0px;
@@ -287,17 +287,16 @@ footer {
 	font-size:14px;
 	font-weight:bold;
   min-width:750px;
-	}
-.menu ul{
+}
+.menu ul {
 	background:#333333;
 	height:35px;
 	list-style:none;
 	margin:0;
   padding:0;
   padding-left:3rem;
-
-	}
-	.menu li{
+}
+	.menu li {
 		float:left;
 		padding:0px;
   }
@@ -318,12 +317,12 @@ footer {
             transition: background-color 0.1s linear;
 		}
 		.menu li a:hover,
-    .menu ul li:hover a{
+    .menu ul li:hover a {
 			background: #2580a2 url("images/hover.gif") bottom center no-repeat;
 			color:#FFFFFF;
 			text-decoration:none;
-			}
-	.menu li ul{
+    }
+	.menu li ul {
 		background:#333333;
 		display:none;
 		height:auto;
@@ -333,13 +332,10 @@ footer {
 		position:absolute;
 		width:225px;
 		z-index:200;
-		/*top:1em;
-		/*left:0;*/
-		}
-	.menu li:hover ul{
+  }
+	.menu li:hover ul {
 		display:block;
-		
-		}
+  }
 	.menu li li {
 		background:url('images/sub_sep.gif') bottom left no-repeat;
 		display:block;
@@ -347,12 +343,11 @@ footer {
 		margin:0px;
 		padding:0px;
 		width:225px;
-		}
-	.menu li:hover li a{
+  }
+	.menu li:hover li a {
 		background:none;
-		
-		}
-	.menu li ul a{
+  }
+	.menu li ul a {
 		display:block;
 		height:35px;
 		font-size:12px;
@@ -360,15 +355,14 @@ footer {
 		margin:0px;
 		padding:0px 10px 0px 15px;
 		text-align:left;
-		}
-		.menu li ul a:hover, .menu li ul li:hover a{
+  }
+		.menu li ul a:hover,
+    .menu li ul li:hover a {
 			background:#2580a2 url('images/hover_sub.gif') center left no-repeat;
 			border:0px;
 			color:#ffffff;
 			text-decoration:none;
-			}
-	.menu p{
+    }
+	.menu p {
 		clear:left;
 		}	
-
-		
