--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ article {
   article h1 {
     margin-top: 3rem;
     margin-bottom: 3rem;
+    margin-left:2rem;
   }
 
 p.copyright {
@@ -270,6 +271,7 @@ footer {
 #icons {
   margin:0px auto;
   margin-top:40px;
+  width:780px;
 }
   .menu-overlay {
     background-color:rgba(0,0,0,0.7);
