--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,6 @@ footer {
     position:relative;
     display:inline-block;
     width: 24%;
-    min-width:250px;
     margin-left: 0.5%;
     margin-right: 0%;
     margin-bottom:0%;
@@ -240,7 +239,7 @@ footer {
       color:#646464;
     }
     .menu-bit a.box {
-      width:260px;
+      width:100%;
       display:block;
       background-color:#ccc;
       height:150px;
