--- a/styles.css
+++ b/styles.css
@@ -226,10 +226,10 @@ footer {
     width:100%;
     opacity:1;
     box-sizing:border-box;
-    -webkit-transition: opacity 0.1s linear, top 0.1s linear;
-       -moz-transition: opacity 0.1s linear, top 0.1s linear;
-         -o-transition: opacity 0.1s linear, top 0.1s linear;
-            transition: opacity 0.1s linear, top 0.1s linear;
+    -webkit-transition: opacity 0.2s linear, top 0.1s linear;
+       -moz-transition: opacity 0.2s linear, top 0.1s linear;
+         -o-transition: opacity 0.2s linear, top 0.1s linear;
+            transition: opacity 0.2s linear, top 0.1s linear;
   }
     .menu-overlay p {
       text-align: center;
@@ -257,6 +257,17 @@ footer {
     margin-bottom:0%;
     min-height:180px;
   }
+    .menu-bit p.title {
+      opacity:0;
+      position:absolute;
+      top:1rem;
+      text-align:center;
+      font-size:23pt;
+    }
+    .menu-bit:hover p.title {
+      pointer-events:none;
+      opacity:1;
+    }
     .menu-bit a {
       color:#646464;
     }
@@ -265,6 +276,13 @@ footer {
       display:block;
       background-color:#ccc;
       height:150px;
+      -webkit-transition: opacity 0.2s linear;
+         -moz-transition: opacity 0.2s linear;
+           -o-transition: opacity 0.2s linear;
+              transition: opacity 0.2s linear;
+    }
+    .menu-bit:hover a.box {
+      opacity:0.3;
     }
       a:hover {
         cursor:pointer;
