--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ p {
 }
 
 article {
-  max-width:940px;
   margin:0px auto;
+  width:95%;
   margin-top: 3rem;
   margin-bottom: 4rem;
 }
@@ -73,8 +73,6 @@ img, embed, object, video, iframe {
 #page {
 	background-position: center;
 	background-repeat:repeat-y;
-	background-color: #FFF;
-	max-width: 940px;
 	margin: 0px auto;
 }
 
@@ -213,14 +211,13 @@ footer {
 #icons {
   margin:0px auto;
   margin-top:40px;
-  width:780px;
 }
   .menu-overlay {
     background-color:rgba(0,0,0,0.7);
     background-color: rgba(37, 71, 114, 0.7);
     position:absolute;
     top:0px;
-    height:180px;
+    height:100%;
     right:0;
     padding:10px;
     width:100%;
@@ -255,7 +252,7 @@ footer {
     margin-left: 0.5%;
     margin-right: 0%;
     margin-bottom:0%;
-    min-height:180px;
+    min-height:220px;
   }
     .menu-bit p.title {
       opacity:0;
@@ -275,7 +272,7 @@ footer {
       width:100%;
       display:block;
       background-color:#ccc;
-      height:150px;
+      height:220px;
       -webkit-transition: opacity 0.2s linear;
          -moz-transition: opacity 0.2s linear;
            -o-transition: opacity 0.2s linear;
@@ -386,7 +383,7 @@ footer {
     .menu li ul li:hover a {
 			background:#2580a2 url('images/hover_sub.gif') center left no-repeat;
 			border:0px;
-			color:#ffffff;
+			color:#fff;
 			text-decoration:none;
     }
 	.menu p {
