--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ footer {
 }
   .menu-overlay {
     background-color:rgba(0,0,0,0.7);
-    background-color: rgba(37, 71, 114, 0.7);
+    background-color: rgba(37, 71, 114, 0.9);
     position:absolute;
     top:0px;
     height:100%;
@@ -236,7 +236,7 @@ footer {
       font-weight:300;
       height:50px;
       width:100%;
-      text-shadow: 1px 1px 1px #222;
+      text-shadow: -1px -1px 1px #222;
       margin: auto;
       position: absolute;
       top: 0; left: 0; bottom: 0; right: 0;
@@ -253,6 +253,9 @@ footer {
     margin-right: 0%;
     margin-bottom:0%;
     min-height:220px;
+    -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+            box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    margin-bottom:5px;
   }
     .menu-bit p.title {
       opacity:0;
@@ -273,13 +276,14 @@ footer {
       display:block;
       background-color:#ccc;
       height:220px;
+      background-size:cover;
       -webkit-transition: opacity 0.2s linear;
          -moz-transition: opacity 0.2s linear;
            -o-transition: opacity 0.2s linear;
               transition: opacity 0.2s linear;
     }
     .menu-bit:hover a.box {
-      opacity:0.3;
+      /* opacity:0.3; */
     }
       a:hover {
         cursor:pointer;
