--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   background-size:cover;
 	font-size: 100%;
 	line-height: 150%;
-	color: #000;
+	color: #fff;
 }
 
 
@@ -43,6 +43,7 @@ article {
     margin-bottom: 3rem;
     margin-left:2rem;
     color:#fff;
+    text-shadow:-1px -1px 1px #222;
   }
 
 p.copyright {
@@ -214,7 +215,6 @@ footer {
   margin-top:40px;
 }
   .menu-overlay {
-    background-color:rgba(0,0,0,0.7);
     background-color: rgba(37, 71, 114, 0.9);
     position:absolute;
     top:0px;
@@ -224,10 +224,6 @@ footer {
     width:100%;
     opacity:1;
     box-sizing:border-box;
-    -webkit-transition: opacity 0.2s linear, top 0.1s linear;
-       -moz-transition: opacity 0.2s linear, top 0.1s linear;
-         -o-transition: opacity 0.2s linear, top 0.1s linear;
-            transition: opacity 0.2s linear, top 0.1s linear;
   }
     .menu-overlay p {
       text-align: center;
@@ -241,8 +237,12 @@ footer {
       margin: auto;
       position: absolute;
       top: 0; left: 0; bottom: 0; right: 0;
+      -webkit-transition: opacity 0.1s linear, top 0.1s linear;
+         -moz-transition: opacity 0.1s linear, top 0.1s linear;
+           -o-transition: opacity 0.1s linear, top 0.1s linear;
+              transition: opacity 0.1s linear, top 0.1s linear;
     }
-    .menu-overlay:hover {
+    .menu-overlay:hover p {
       opacity:0;
       top:-20px;
     }
@@ -254,11 +254,15 @@ footer {
     margin-right: 0%;
     margin-bottom:0%;
     min-height:220px;
+    border-top:1px solid rgba(123, 153, 190, 0.7);
+    border-left:1px solid rgba(123, 153, 190, 0.7);
     -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
             box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     margin-bottom:5px;
   }
     .menu-bit p.title {
+      width:100%;
+      text-shadow: -1px -1px 1px #222;
       opacity:0;
       position:absolute;
       top:1rem;
