--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,27 @@ nav ul li {
 div#middle {
 	overflow: hidden;
 }
+.servicesMenu {
+  padding: 5px 15px 0px 15px; 
+  background-color:#CCC;
+  border: 1px;
+  height: 65px;
+
+}
+.menuItem {
+  display: inline-block;
+  border-bottom: 2px solid #ccc ;
+  padding: 0;
+  margin: 0;
+height: 65px;  
+
+}
+.menuItemActive {
+  /*border: 2px solid #336699 ;*/
+  display: inline-block;
+  height: 65px;
+}
+
 	
 	#headshot {
 		float: right;
