--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,8 @@ img, embed, object, video, iframe {
 
 #header {
   background-color:#6a97cf;
+  background-image: url("_images/blue_circles.jpg");
+  background-size:cover;
   padding:1px;
   position:relative;
   padding-right:1rem;
@@ -242,6 +244,7 @@ footer {
 }
   .menu-overlay {
     background-color: rgba(37, 71, 114, 0.9);
+    background-color: rgba(72, 119, 179, 0.9);
     position:absolute;
     top:0px;
     height:100%;
@@ -257,7 +260,9 @@ footer {
       line-height: 17pt;
       font-weight:300;
       height:50px;
-      width:100%;
+      width:98%;
+      position:absolute;
+      top:-8px;
       text-shadow: -1px -1px 1px #222;
       -webkit-transition: opacity 0.1s linear, top 0.1s linear;
          -moz-transition: opacity 0.1s linear, top 0.1s linear;
@@ -266,6 +271,7 @@ footer {
     }
     .menu-overlay:hover {
       background-color: rgba(74, 119, 177, 0.9);
+      background-color: rgba(57, 96, 146, 0.9);
     }
     .menu-overlay:hover p {
       opacity:0;
@@ -279,13 +285,19 @@ footer {
     margin-right: 0%;
     margin-bottom:0%;
     min-height:150px;
-    border-top:1px solid rgba(123, 153, 190, 0.7);
-    border-left:1px solid rgba(123, 153, 190, 0.7);
+    border-top:1px solid rgba(194, 217, 245, 0.7);
+    border-left:1px solid rgba(194, 217, 245, 0.7);
     -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
             box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     margin-bottom:5px;
   }
+    .menu-bit:hover {
+      border-top:1px solid rgba(194, 217, 245, 0.5) !important;
+      border-left:1px solid rgba(194, 217, 245, 0.5) !important;
+    }
     .menu-bit p {
+      font-family: "Century Gothic";
+      font-weight:lighter;
       pointer-events:none;
       width:100%;
       -webkit-transition: opacity 0.1s linear, top 0.1s linear;
@@ -294,14 +306,14 @@ footer {
               transition: opacity 0.1s linear, top 0.1s linear;
     }
     .menu-bit p.title {
-      font-family: "Century Gothic";
-      width:100%;
+      width:95%;
       text-shadow: -1px -1px 1px #222;
+      font-weight:normal;
       opacity:0;
       position:absolute;
       margin-left:5px;
-      top:0.1rem;
-      font-size:23pt;
+      top:-19px;
+      font-size:20pt;
       line-height: 22pt;
     }
     .menu-bit p.see-more {
@@ -336,9 +348,6 @@ footer {
          -moz-transition: opacity 0.2s linear;
            -o-transition: opacity 0.2s linear;
               transition: opacity 0.2s linear;
-    }
-    .menu-bit:hover a.box {
-      /* opacity:0.3; */
     }
       a:hover {
         cursor:pointer;
