--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ green: #296431
 body {
   font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
   margin:0;
-  background-image: url('_images/crossed_stripes.png');
+  background-image: url('_images/pw_maze_white.png');
 	font-size: 100%;
 	line-height: 150%;
 	color: #fff;
@@ -22,7 +22,6 @@ body {
 
 h1,
 h2 {
-  font-family: "Century Gothic";
   font-weight:lighter;
 }
 h1 {
@@ -46,8 +45,7 @@ article {
     margin-top: 3rem;
     margin-bottom: -1rem;
     font-weight:300;
-    color:#fff;
-    text-shadow:-1px -1px 1px #222;
+    color:#222;
   }
 
 p.copyright {
@@ -304,7 +302,6 @@ footer {
       border-left:1px solid rgba(194, 217, 245, 0.5) !important;
     }
     .menu-bit p {
-      font-family: "Century Gothic";
       font-weight:lighter;
       pointer-events:none;
       width:100%;
@@ -314,20 +311,21 @@ footer {
               transition: opacity 0.1s linear, top 0.1s linear;
     }
     .menu-bit p.title {
+      font-family: "Roboto Slab";
       width:95%;
+      text-align:center;
+      top:2rem;
       text-shadow: -1px -1px 1px #222;
       font-weight:normal;
       opacity:0;
       position:absolute;
       margin-left:5px;
-      top:-19px;
       font-size:20pt;
       line-height: 22pt;
     }
     .menu-bit p.see-more {
       position:absolute;
-      bottom:-20px;
-      background-color:rgba(0,0,0,0.2);
+      top:10px;
       text-align:center;
       font-size:11pt;
       font-weight:300;
@@ -362,10 +360,12 @@ footer {
       }
 
 #footer-desc {
-  background-color:#cccccb;
+  background-color:#999;
   padding:10px;
   color:#222;
   box-sizing:border-box;
+  -webkit-box-shadow: inset -6px 1px 9px #4E4E4E;
+          box-shadow: inset -6px 1px 9px #4E4E4E;
 }
   #footer-desc .contents {
     padding-left:3rem;
@@ -389,7 +389,7 @@ footer {
   min-width:750px;
 }
 .menu ul {
-	background:#333333;
+	background:#999;
 	height:35px;
 	list-style:none;
 	margin:0;
@@ -402,7 +402,7 @@ footer {
   }
 	.menu li a,
   .menu li span {
-		background:#333333 url("images/seperator.gif") bottom right no-repeat;
+		background:#999 url("images/seperator.gif") bottom right no-repeat;
 		color:#cccccc;
 		display:block;
 		font-weight:normal;
@@ -423,7 +423,7 @@ footer {
 			text-decoration:none;
     }
 	.menu li ul {
-		background:#333333;
+		background:#999;
 		display:none;
 		height:auto;
 		padding:0px;
