--- a/styles.css
+++ b/styles.css
@@ -119,8 +119,16 @@ img, embed, object, video, iframe {
         #envelope {
           margin-left:1rem;
         }
-    #header h1 {
+    #header h1,
+    #header h2 {
       text-shadow: 1px 1px 1px #222;
+    }
+    #header h2 {
+      font-size: 17px;
+      margin: 0px auto;
+      margin-top: -1rem;
+      margin-bottom: 1rem;
+      font-weight:300;
     }
 
 nav {
@@ -142,7 +150,7 @@ nav ul li {
 	}
 	
 	nav ul li a:hover {
-		color: #999;
+		color: #868686;
 	}
 
 div#middle {
@@ -200,7 +208,7 @@ height: 65px;
 		}
 		
 		aside ul li a:hover {
-			color: #999;
+			color: #868686;
 		}
 
 
@@ -222,7 +230,7 @@ footer {
   }
   footer a:link,
   footer a:visited {
-    color:#797979;
+    color:#fff;
     text-decoration:none;
     -webkit-transition: color 0.1s linear;
        -moz-transition: color 0.1s linear;
@@ -249,7 +257,6 @@ footer {
   margin-top:40px;
 }
   .menu-overlay {
-    background-color: rgba(37, 71, 114, 0.9);
     background-color: rgba(72, 119, 179, 0.9);
     position:absolute;
     top:0px;
@@ -360,9 +367,10 @@ footer {
       }
 
 #footer-desc {
-  background-color:#999;
+  background-color:#868686;
   padding:10px;
-  color:#222;
+  color:#bfc0c3;
+  text-shadow: 1px 1px 1px #504A4A;
   box-sizing:border-box;
   -webkit-box-shadow: inset -6px 1px 9px #4E4E4E;
           box-shadow: inset -6px 1px 9px #4E4E4E;
@@ -386,10 +394,9 @@ footer {
 	font: 67.5% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
 	font-size:14px;
 	font-weight:bold;
-  min-width:750px;
 }
 .menu ul {
-	background:#999;
+	background:#868686;
 	height:35px;
 	list-style:none;
 	margin:0;
@@ -402,8 +409,8 @@ footer {
   }
 	.menu li a,
   .menu li span {
-		background:#999 url("images/seperator.gif") bottom right no-repeat;
-		color:#cccccc;
+		background:#868686 url("images/seperator.gif") bottom right no-repeat;
+		color:#fff;
 		display:block;
 		font-weight:normal;
 		line-height:35px;
@@ -411,6 +418,7 @@ footer {
 		padding:0px 25px;
 		text-align:center;
 		text-decoration:none;
+    text-shadow:1px 1px 1px #575757;
     -webkit-transition: background-color 0.1s linear;
        -moz-transition: background-color 0.1s linear;
          -o-transition: background-color 0.1s linear;
@@ -418,12 +426,12 @@ footer {
 		}
 		.menu li a:hover,
     .menu ul li:hover a {
-			background: #2580a2 url("images/hover.gif") bottom center no-repeat;
+			background: rgba(72, 119, 179, 0.9) url("images/hover.gif") bottom center no-repeat;
 			color:#FFFFFF;
 			text-decoration:none;
     }
 	.menu li ul {
-		background:#999;
+		background:#868686;
 		display:none;
 		height:auto;
 		padding:0px;
@@ -458,7 +466,7 @@ footer {
   }
 		.menu li ul a:hover,
     .menu li ul li:hover a {
-			background:#2580a2 url('images/hover_sub.gif') center left no-repeat;
+			background:rgba(72, 119, 179, 0.9) url('images/hover_sub.gif') center left no-repeat;
 			border:0px;
 			color:#fff;
 			text-decoration:none;
@@ -493,20 +501,23 @@ footer {
   vertical-align:top;
 }
   .pretty-bit h2 {
-    text-align:center;
-    font-size:13pt;
+    text-align:left;
+    font-family: "Roboto Slab";
+    font-size:16pt;
+    color: rgba(145, 215, 255, 0.9);
+    text-shadow: 1px 1px 1px rgba(37, 38, 39, 0.9);
     text-transform:uppercase;
   }
   .pretty-bit hr {
     border:0;
-    border-top:5px solid #797979;
+    border-top:5px solid #434445;
     width:50%;
     margin-top:1rem;
   }
   .pretty-bit p {
-    width:75%;
-    margin:0px auto;
-    text-align:center;
+    width:88%;
+    margin:0;
+    text-align:left;
   }
 
 /* Desktop & Mobile Screens Set to a Width of 600px or Below */
