updating header image

--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ img, embed, object, video, iframe {
 
 #header {
   background-color:#6a97cf;
-  background-image: url("_images/blue_circles.jpg");
+  background-image: url("_images/blue_banner.png");
   background-size:cover;
   padding:1px;
   position:relative;
