--- a/styles.css
+++ b/styles.css
@@ -356,7 +356,8 @@ footer {
       display:block;
       background-color:#ccc;
       height:150px;
-      background-size:cover;
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
       -webkit-transition: opacity 0.2s linear;
          -moz-transition: opacity 0.2s linear;
            -o-transition: opacity 0.2s linear;
