--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,11 @@ green: #296431
 body {
   font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
   margin:0;
-  background-image: url('_images/pw_maze_white.png');
+  background-image: url('_images/gray_bg.jpg');
+  background-size:cover;
 	font-size: 100%;
 	line-height: 150%;
-	color: #fff;
+	color: #cdcccc;
 }
 
 
@@ -150,7 +151,7 @@ nav ul li {
 	}
 	
 	nav ul li a:hover {
-		color: #868686;
+		color: #797979;
 	}
 
 div#middle {
@@ -208,7 +209,7 @@ height: 65px;
 		}
 		
 		aside ul li a:hover {
-			color: #868686;
+			color: #797979;
 		}
 
 
@@ -257,7 +258,7 @@ footer {
   margin-top:40px;
 }
   .menu-overlay {
-    background-color: rgba(72, 119, 179, 0.9);
+    background-color: rgba(114, 165, 216, 0.9);
     position:absolute;
     top:0px;
     height:100%;
@@ -283,26 +284,26 @@ footer {
               transition: opacity 0.1s linear, top 0.1s linear;
     }
     .menu-overlay:hover {
-      background-color: rgba(74, 119, 177, 0.9);
-      background-color: rgba(57, 96, 146, 0.9);
+      background-color: rgba(73, 108, 137, 0.9);
     }
     .menu-overlay:hover p {
       opacity:0;
       top:-20px;
     }
   #icons .menu-bit {
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
     position:relative;
-    display:inline-block;
-    width: 24%;
-    margin-left: 0.5%;
-    margin-right: 0%;
-    margin-bottom:0%;
-    min-height:150px;
+    padding-bottom: 18%;
+    float: left;
+    height: 0;
+    width: 18%;
     border-top:1px solid rgba(194, 217, 245, 0.7);
     border-left:1px solid rgba(194, 217, 245, 0.7);
     -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
             box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-    margin-bottom:5px;
+    margin-bottom:2%;
+    margin-right:2%;
   }
     .menu-bit:hover {
       border-top:1px solid rgba(194, 217, 245, 0.5) !important;
@@ -325,6 +326,7 @@ footer {
       text-shadow: -1px -1px 1px #222;
       font-weight:normal;
       opacity:0;
+      color:#fff;
       position:absolute;
       margin-left:5px;
       font-size:20pt;
@@ -354,10 +356,7 @@ footer {
     .menu-bit a.box {
       width:100%;
       display:block;
-      background-color:#ccc;
       height:150px;
-      background-repeat: no-repeat;
-      background-position: 50% 50%;
       -webkit-transition: opacity 0.2s linear;
          -moz-transition: opacity 0.2s linear;
            -o-transition: opacity 0.2s linear;
@@ -368,9 +367,9 @@ footer {
       }
 
 #footer-desc {
-  background-color:#868686;
+  background-color:#797979;
   padding:10px;
-  color:#bfc0c3;
+  color:#cdcccc;
   text-shadow: 1px 1px 1px #504A4A;
   box-sizing:border-box;
   -webkit-box-shadow: inset -6px 1px 9px #4E4E4E;
@@ -397,7 +396,7 @@ footer {
 	font-weight:bold;
 }
 .menu ul {
-	background:#868686;
+	background:#797979;
 	height:35px;
 	list-style:none;
 	margin:0;
@@ -410,7 +409,7 @@ footer {
   }
 	.menu li a,
   .menu li span {
-		background:#868686 url("images/seperator.gif") bottom right no-repeat;
+		background:#797979 url("images/seperator.gif") bottom right no-repeat;
 		color:#fff;
 		display:block;
 		font-weight:normal;
@@ -427,12 +426,12 @@ footer {
 		}
 		.menu li a:hover,
     .menu ul li:hover a {
-			background: rgba(72, 119, 179, 0.9) url("images/hover.gif") bottom center no-repeat;
+			background: rgba(114, 165, 216, 0.9) url("images/hover.gif") bottom center no-repeat;
 			color:#FFFFFF;
 			text-decoration:none;
     }
 	.menu li ul {
-		background:#868686;
+		background:#797979;
 		display:none;
 		height:auto;
 		padding:0px;
@@ -467,7 +466,7 @@ footer {
   }
 		.menu li ul a:hover,
     .menu li ul li:hover a {
-			background:rgba(72, 119, 179, 0.9) url('images/hover_sub.gif') center left no-repeat;
+			background:rgba(114, 165, 216, 0.9) url('images/hover_sub.gif') center left no-repeat;
 			border:0px;
 			color:#fff;
 			text-decoration:none;
