--- a/css/easy-responsive-tabs.css
+++ b/css/easy-responsive-tabs.css
@@ -44,8 +44,8 @@ h2.resp-accordion {
 .resp-tab-active {
     border: 1px solid #c1c1c1;
     border-bottom: none;
-    margin-bottom: -1px;
-    padding: 12px 14px 14px 14px;
+    margin-bottom: -1px !important;
+    padding: 12px 14px 14px 14px !important;
 }
 
 .resp-tab-active {
@@ -70,13 +70,13 @@ h2.resp-accordion {
 }
 
 h2.resp-tab-active {
-    border-bottom: 0px solid #c1c1c1;
-    margin-bottom: 0px;
-    padding: 10px 15px;
+    border-bottom: 0px solid #c1c1c1 !important;
+    margin-bottom: 0px !important;
+    padding: 10px 15px !important;
 }
 
 h2.resp-tab-title:last-child {
-    border-bottom: 12px solid #c1c1c1;
+    border-bottom: 12px solid #c1c1c1 !important;
     background: blue;
 }
 /*-----------Vertical tabs-----------*/
@@ -87,7 +87,7 @@ h2.resp-tab-title:last-child {
 
 .resp-vtabs .resp-tabs-list li {
     display: block;
-    padding: 15px 15px;
+    padding: 15px 15px !important;
     margin: 0;
     cursor: pointer;
     float: none;
@@ -114,8 +114,8 @@ h2.resp-tab-title:last-child {
     background-color: #fff;
     position: relative;
     z-index: 1;
-    margin-right: -1px;
-    padding: 14px 15px 15px 14px;
+    margin-right: -1px !important;
+    padding: 14px 15px 15px 14px !important;
 }
 
 .resp-arrow {
@@ -137,7 +137,7 @@ h2.resp-tab-active span.resp-arrow {
 
 /*-----------Accordion styles-----------*/
 h2.resp-tab-active {
-    background: #DBDBDB;
+    background: #DBDBDB !important;
 }
 .resp-easy-accordion  h2.resp-accordion {
         display: block;
@@ -147,7 +147,7 @@ h2.resp-tab-active {
 }
 
 .resp-easy-accordion .resp-tab-content:last-child {
-    border-bottom: 1px solid #c1c1c1;
+    border-bottom: 1px solid #c1c1c1 !important;
 }
 
 .resp-jfit {
@@ -160,8 +160,9 @@ h2.resp-tab-active {
 }
 
 h2.resp-accordion:first-child {
-    border-top: 1px solid #c1c1c1;
+    border-top: 1px solid #c1c1c1 !important;
 }
+
 
 @media only screen and (max-width: 768px) {
     ul.resp-tabs-list {
@@ -187,6 +188,6 @@ h2.resp-accordion:first-child {
         display:none !important;
     }
     .resp-vtabs .resp-tab-content:last-child {
-        border-bottom: 1px solid #c1c1c1 ;
+        border-bottom: 1px solid #c1c1c1 !important;
     }
 }
