--- a/css/easy-responsive-tabs.css
+++ b/css/easy-responsive-tabs.css
@@ -1,9 +1,4 @@
-﻿body {
-    margin: 0px;
-    padding: 0px;
-    background: #f5f5f5;
-    font-family: 'Segoe UI';
-}
+﻿
 ul.resp-tabs-list, p {
     margin: 0px;
     padding: 0px;
