--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,9 @@ footer {
 #icons {
   margin:0px auto;
   margin-top:40px;
+  width:940px;
+  overflow:hidden;
+  border:1px solid red;
 }
   .menu-overlay {
     background-color: rgba(114, 165, 216, 0.9);
@@ -274,7 +277,7 @@ footer {
       line-height: 17pt;
       font-weight:300;
       height:50px;
-      width:98%;
+      width:90% !important;
       position:absolute;
       top:-8px;
       text-shadow: -1px -1px 1px #222;
@@ -294,16 +297,17 @@ footer {
     background-repeat: no-repeat;
     background-position: 50% 50%;
     position:relative;
-    padding-bottom: 18%;
+    padding-bottom: 20%;
     float: left;
     height: 0;
-    width: 18%;
+    width: 20%;
     border-top:1px solid rgba(194, 217, 245, 0.7);
     border-left:1px solid rgba(194, 217, 245, 0.7);
     -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
             box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     margin-bottom:2%;
     margin-right:2%;
+    margin-left:2%;
   }
     .menu-bit:hover {
       border-top:1px solid rgba(194, 217, 245, 0.5) !important;
