--- a/styles2.css
+++ b/styles2.css
@@ -50,12 +50,10 @@ article {
     line-height: 28pt;
   }
   #left {
-    border:1px solid blue;
     width:20%;
     float:left;
   }
   #right {
-    border:1px solid green;
     width:50%;
     margin-left:30px;
     float:left;
@@ -536,6 +534,9 @@ footer {
   #left {
     width:100%;
     margin-bottom:2rem;
+  }
+  #right {
+    width:95%;
   }
 }
 
