rwd is a pain sometimes

--- a/styles2.css
+++ b/styles2.css
@@ -43,11 +43,10 @@ article {
   margin-bottom: 2rem;
 }
   article h1 {
-    margin-top: 2rem;
-    margin-bottom: -1rem;
-    font-weight:300;
-    color:#222;
+    font-weight: 300;
+    color: #222;
     line-height: 28pt;
+    margin-left: 2rem;
   }
   #left {
     width:20%;
@@ -315,7 +314,7 @@ footer {
     -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
             box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     margin-bottom:2%;
-    width: 17%;
+    width: 20%;
     padding-bottom: 14%;
     margin-right: 0%;
     margin-left: 3%;
@@ -525,9 +524,6 @@ footer {
 /**** RWD ****/
 /* Desktop & Mobile Screens Set to 1024 x 768 or Below  */
 @media screen and (max-width: 1030px) {
-  #icons {
-    width:90%;
-  }
   .menu-overlay p {
     line-height:26pt;
   }
@@ -577,15 +573,15 @@ footer {
   #right {
     width:75%;
   }
-  #icons .menu-bit {
-    width:30%;
-  }
 }
 
 @media screen and (max-width: 705px) {
   #contact-header {
     position:static;
     margin-top:1rem;
+  }
+  #icons .menu-bit {
+    width:30%;
   }
     #contact-header p {
       font-size:18px;
