--- a/styles.css
+++ b/styles.css
@@ -39,14 +39,25 @@ p {
 article {
   margin:0px auto;
   width:95%;
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-bottom: 2rem;
 }
   article h1 {
-    margin-top: 2rem;
     margin-bottom: -1rem;
     font-weight:300;
     color:#222;
+    line-height: 28pt;
+    margin-left:2rem;
+  }
+  #left {
+    width:20%;
+    float:left;
+  }
+  #right {
+    border:1px solid red;
+    width:73%;
+    margin-left:30px;
+    float:left;
   }
 
 p.copyright {
@@ -258,8 +269,7 @@ footer {
 
 #icons {
   margin:0px auto;
-  margin-top:40px;
-  width:940px;
+  width:100%;
   overflow:hidden;
 }
   .menu-overlay {
@@ -306,16 +316,10 @@ footer {
     -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
             box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     margin-bottom:2%;
-    /* 
     width: 20%;
-    padding-bottom: 20%;
-    margin-right:2%;
-    margin-left:2%; 
-     */
-    width: 13%;
-    padding-bottom: 13%;
-    margin-right:6%;
-    margin-left:5%; 
+    padding-bottom: 14%;
+    margin-right: 0%;
+    margin-left: 3%;
   }
     .menu-bit:hover {
       border-top:1px solid rgba(194, 217, 245, 0.5) !important;
@@ -331,7 +335,6 @@ footer {
               transition: opacity 0.1s linear, top 0.1s linear;
     }
     .menu-bit p.title {
-      font-family: "Roboto Slab";
       width:95%;
       text-align:center;
       top:2rem;
@@ -501,7 +504,6 @@ footer {
 }
   .pretty-bit h2 {
     text-align:left;
-    font-family: "Roboto Slab";
     font-size:16pt;
     color: rgba(145, 215, 255, 0.9);
     text-shadow: 1px 1px 1px rgba(37, 38, 39, 0.9);
@@ -520,31 +522,10 @@ footer {
   }
 
 /**** RWD ****/
-/* Desktop & Mobile Screens Set to 1024 x 768 or Below  */
-@media screen and (max-width: 1030px) {
-  #icons {
-    width:90%;
+@media (min-width: 1000px) {
+  body {
+    border:1px solid blue;
   }
-  .menu-overlay p {
-    line-height:26pt;
-  }
-}
-
-/* Desktop & Mobile Screens Set to a Width of 600px or Below */
-@media screen and (max-width: 600px) {
-  #icons .menu-bit {
-    width:100%;
-  }
-  .menu-overlay p {
-    font-size:23pt;
-  }
-    .menu-overlay:hover {
-      opacity:1;
-      top:0;
-    }
-}
-
-@media screen (min-width: 705px) and (max-width: 1150px) {
   #header h1 span,
   #header ul li {
     display:block;
@@ -564,12 +545,34 @@ footer {
     line-height:14pt;
     top:2.5rem;
   }
+  #right {
+    width:66%;
+  }
+  .menu-overlay p {
+    line-height:16pt;
+  }
+  #left {
+    width:22%;
+    margin-bottom:2rem;
+  }
+  #icons .menu-bit {
+    width:21%;
+  }
 }
 
-@media screen and (max-width: 705px) {
+@media screen and (max-width: 999px) {
+  body {
+    border:1px solid green;
+  }
   #contact-header {
     position:static;
     margin-top:1rem;
+  }
+  #icons .menu-bit {
+    width:6%;
+    margin-left: 1% !important;
+    margin-right: 1% !important;
+    padding-bottom:7%;
   }
     #contact-header p {
       font-size:18px;
@@ -582,16 +585,47 @@ footer {
   }
     .menu-bit p.title {
       width: 53%;
+      left:0;
+      top:1rem;
+      left:5px;
+      text-align:left;
+      font-size:14pt;
+      line-height:16pt;
     }
-  p.see-more {
-    width:81%;
-  }
+    .menu-bit p.see-more {
+      width:81%;
+      top:0;
+    }
   .menu-bit p {
-    line-height: 19pt;
-    font-size: 19pt;
+    line-height: 16pt;
+    font-size: 13pt;
   }
-  .menu-bit p.title {
-    width:66%;
-    font-size:17pt;
+  #left {
+    float: none;
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+  #right {
+    width:94%;
   }
 }
+
+/* Desktop & Mobile Screens Set to a Width of 600px or Below */
+@media screen and (max-width: 600px) {
+  body {
+    border:1px solid purple;
+  }
+  #icons .menu-bit {
+    width:70%;
+    padding-bottom:16%;
+  }
+  .menu-overlay p {
+    font-size:20pt;
+    line-height:20pt;
+  }
+    .menu-overlay:hover {
+      opacity:1;
+      top:0;
+    }
+}
+
