making menu font larger

--- a/styles.css
+++ b/styles.css
@@ -452,7 +452,7 @@ footer {
 	.menu li ul a {
 		display:block;
 		height:35px;
-		font-size:12px;
+		font-size:11pt;
 		font-style:normal;
 		margin:0px;
 		padding:0px 10px 0px 15px;
