--- a/styles.css
+++ b/styles.css
@@ -383,6 +383,7 @@ footer {
     }
 
 .menu {
+  min-width:735px;
 	border:none;
 	margin:0px;
 	padding:0px;
@@ -504,17 +505,82 @@ footer {
   font-family: "Chau Philomene One";
   position:absolute;
   top:30%;
-  right:0;
+  right:5px;
 }
 
 /**** RWD ****/
-@media (min-width: 1000px) {
-}
-
-@media screen and (max-width: 999px) {
-}
-
 /* Desktop & Mobile Screens Set to a Width of 600px or Below */
+@media (min-width: 691px) and (max-width: 800px) {
+  body {
+    border:1px solid red;
+  }
+  #icons .menu-bit {
+    width:30%;
+  }
+  .pretty-bit {
+    width:36%;
+    margin-bottom:2rem;
+  }
+}
+@media (min-width: 601px) and (max-width: 690px) {
+  body {
+    border:1px solid blue;
+  }
+  #icons .menu-bit {
+    width:46%;
+  }
+  .pretty-bit {
+    width:100%;
+    margin-bottom:2rem;
+  }
+    .pretty-bit hr {
+      width:90%;
+    }
+}
 @media screen and (max-width: 600px) {
+  body {
+    border:1px solid green;
+  }
+  #icons .menu-bit {
+    width:90%;
+  }
+  .menu-bit p.see-more {
+    top: -19px;
+    height: 60px;
+  }
+  .pretty-bit {
+    width:100%;
+    margin-bottom:2rem;
+  }
+    .pretty-bit hr {
+      width:90%;
+    }
 }
 
+
+/*** RWD for header ***/
+@media screen and (max-width: 800px) {
+  #contact-header {
+    position:static;
+  }
+}
+
+/*** RWD for pretty bit ***/
+@media (min-width: 601px) and (max-width: 910px) {
+  .pretty-bit {
+    width:100%;
+    margin-bottom:2rem;
+  }
+    .pretty-bit hr {
+      width:90%;
+    }
+}
+@media screen and (max-width: 600px) {
+  .pretty-bit {
+    width:100%;
+    margin-bottom:2rem;
+  }
+    .pretty-bit hr {
+      width:90%;
+    }
+}
