--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,7 @@ footer {
   }
   footer a:link,
   footer a:visited {
-    color:#fff;
+    color:#3F3F3F;
     text-decoration:none;
     -webkit-transition: color 0.1s linear;
        -moz-transition: color 0.1s linear;
