--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,7 @@ article {
   margin-bottom: 2rem;
 }
   article h1 {
-    font-weight:300;
-    margin-bottom:0.9rem;
+    margin-bottom:1.2rem;
     color:#222;
     line-height: 28pt;
     margin-left:2rem;
@@ -123,7 +122,9 @@ img, embed, object, video, iframe {
     #header h2 {
       font-size: 22pt;
       line-height: 21pt;
-      margin-top: 0.3rem;
+    }
+    #header h1 {
+      margin-top:0.7rem;
     }
     #header h2 {
       font-size: 17px;
@@ -334,7 +335,6 @@ footer {
       line-height: 17pt;
       background-color: rgba(255,255,255,0.8);
       left:-10px;
-      top:10px;
       height:65px;
       font-weight:300;
       box-sizing:border-box;
