--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,10 @@ nav ul li {
 
 div#middle {
 	overflow: hidden;
+  -webkit-box-shadow: inset 0  8px 8px -8px #adadad,
+                      inset 0 -8px 8px -8px #adadad;
+          box-shadow: inset 0  8px 8px -8px #adadad, 
+                      inset 0 -8px 8px -8px #adadad;
 }
 .servicesMenu {
   padding: 5px 15px 0px 15px; 
@@ -367,8 +371,6 @@ footer {
   padding:10px;
   color:#5e5e5e;
   box-sizing:border-box;
-  -webkit-box-shadow: inset -6px 1px 9px #4E4E4E;
-          box-shadow: inset -6px 1px 9px #4E4E4E;
 }
   #footer-desc .contents {
     padding-left:3rem;
